Fixing some alignments

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -29,19 +29,19 @@
 
 @media (min-width: 768px) {
   .trclogo {
-    width: 20%;
+    width: 10%;
   }
 }
 
 @media (min-width: 768px) {
   .pingologo {
-    width: 30%;
+    width: 15%;
   }
 }
 
 @media (max-width: 767px) {
   .trclogo,
   .pingologo {
-    width: 70%;
+    width: 30%;
   }
 }
